deploys/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notes-frontend
  labels:
    app: notes-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notes-frontend
  template:
    metadata:
      labels:
        app: notes-frontend
    spec:
      containers:
      - name: frontend
        image: bariase/simple-notes-frontend:latest
        ports:
        - containerPort: 80
