deploys/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notes-backend-svc
spec:
  selector:
    app: notes-backend
  ports:
  - protocol: TCP
    port: 80 # Puerto interno del clúster para el servicio
    targetPort: 3000 # Puerto del contenedor del backend
  type: ClusterIP # Solo accesible dentro del clúster
